[package]
name = "GAMES202-HW-vulkano"
version = "0.1.0"
authors = ["06393993lky"]
edition = "2018"

[workspace]
members = ["games202-hw-vulkano-macros"]

[dependencies]
imgui = "*"
imgui-vulkano-renderer = "0.7.0"
imgui-winit-support = "0.7.0"
vulkano = "0.20.0"
vulkano-shaders = "0.20.0"
vulkano-win = "0.20.0"
winit = "0.24.0"
clipboard = "*"
euclid = "*"
error-chain = "*"
obj = "*"
tinyfiledialogs = "*"
image = "*"
ordered-float = "*"
paste = "*"
games202-hw-vulkano-macros = { path = "games202-hw-vulkano-macros" }