[package]
name = "games202-hw-vulkano-macros"
version = "0.1.0"
authors = ["Kaiyi Li <617130187@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
vulkano = "0.20.0"
vulkano-shaders = "0.20.0"
vulkano-win = "0.20.0"
paste = "*"
syn = "*"
quote = "*"